syntax = "proto3";

package query;

option java_package = "ar.edu.itba.pod.grpc.query";
option java_multiple_files = true;

service QueryService {
  rpc QueryCounters(Filters) returns (ListCounterResponse);
  rpc QueryCheckIns(Filters) returns (ListCheckIn);
}

// TODO - make utils.proto for common messages
message Interval {
  int32 lower_bound = 1;
  int32 upper_bound = 2;
}

message ListCounterResponse {
  repeated CounterResponse counterResponse = 1;
}

message ListCheckIn {
  repeated CheckIn checkIn = 1;
}

message CounterResponse {
  Interval interval = 1;
  string airline = 2;
  repeated string flight_code = 3;
  int32 passengers = 4;
  string sectorName = 5;
}

message Filters {
  string sector_name = 1;
  string outPath = 2;
  string airline = 3;
}

message CheckIn {
  string sector_name = 1;
  int32 counter = 2;
  string airline = 3;
  string flight_code = 4;
  string booking_code = 5;
}